[gd_scene load_steps=9 format=3 uid="uid://bkvwhmr2715yq"]

[ext_resource type="Script" path="res://Platforming/Interact/CrumblyPlatform.gd" id="1_2rr05"]
[ext_resource type="Texture2D" uid="uid://6mrk3upy455o" path="res://Textures/Interact/Crumble2.png" id="1_u8m3t"]
[ext_resource type="AudioStream" uid="uid://bjuexv5oubfom" path="res://Sounds/pine/crumble.ogg" id="3_0ldau"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjfhg"]
resource_local_to_scene = true
size = Vector2(32, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqc68"]
resource_local_to_scene = true
size = Vector2(32, 4)

[sub_resource type="Animation" id="Animation_ukk1n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_krtvy"]
resource_name = "crumble"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 2.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CrumblePlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_0ldau")
}],
"times": PackedFloat32Array(0.3)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_muyw2"]
_data = {
"RESET": SubResource("Animation_ukk1n"),
"crumble": SubResource("Animation_krtvy")
}

[node name="CrumblyPlatform" type="StaticBody2D"]
z_index = -1
texture_filter = 1
collision_layer = 2049
collision_mask = 2049
script = ExtResource("1_2rr05")
length = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u8m3t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_mjfhg")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 0
collision_mask = 2050

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_eqc68")
debug_color = Color(0.262745, 0.505882, 0.992157, 0.419608)

[node name="CrumblePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0ldau")
volume_db = -13.8
max_polyphony = 3
bus = &"Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_muyw2")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
